uspto-ohrs/main/schema/objects/Selectee__c/Selectee__c.object-meta.xml
<CustomObject>
    <description>Stores Candidates&apos; information</description>
    <label>Selectee</label>
    <nameField>
        <label>Selectee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selectees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>