uspto-ohrs/main/schema/objects/Selectee__c/fields/Discipline__c.field-meta.xml
<CustomField>
    <fullName>Discipline__c</fullName>
    <description>The Discipline for which the candidate is being hired for.</description>
    <label>Discipline</label>
    <length>40</length>
    <type>Text</type>
</CustomField>