uspto-ohrs/main/schema/objects/Selectee__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Stores candidates&apos;s email</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>