uspto-ohrs/main/schema/objects/Selectee__c/fields/Expected_EOD__c.field-meta.xml
<CustomField>
    <fullName>Expected_EOD__c</fullName>
    <description>This is the date that the selectee can start work</description>
    <label>Expected EOD</label>
    <type>Date</type>
</CustomField>